회원가입 스크롤뷰로 바꿈

--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -24,176 +24,205 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#FFFF0000"/>
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="아이디(이메일)"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <FrameLayout
+            android:padding="20dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="아이디(이메일)"
+                android:textSize="15dp"
+                android:fontFamily="@font/notosansregular"/>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="290dp"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="이메일 주소"
-                    android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="290dp"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#939393"
+                        android:hint="이메일 주소"
+                        android:textSize="13dp"
+                        android:backgroundTint="#ED6868"
+                        android:fontFamily="@font/notosansregular"/>
 
-                <Button
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center"
+                        android:background="@drawable/circle_design2"
+                        android:fontFamily="@font/notosansbold"
+                        android:text="중복확인"
+                        android:textColor="#ED6868" />
+                </FrameLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="비밀번호"
+                android:textSize="15dp"
+                android:fontFamily="@font/notosansregular"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#939393"
+                        android:hint="비밀번호"
+                        android:textSize="13dp"
+                        android:backgroundTint="#ED6868"
+                        android:fontFamily="@font/notosansregular"/>
+                </FrameLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="비밀번호 확인"
+                android:textSize="15dp"
+                android:fontFamily="@font/notosansregular"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#939393"
+                        android:hint="비밀번호 확인"
+                        android:textSize="13dp"
+                        android:backgroundTint="#ED6868"
+                        android:fontFamily="@font/notosansregular"/>
+                </FrameLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="이름"
+                android:textSize="15dp"
+                android:fontFamily="@font/notosansregular"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#939393"
+                        android:hint="실명을 입력하세요"
+                        android:textSize="13dp"
+                        android:backgroundTint="#ED6868"
+                        android:fontFamily="@font/notosansregular"/>
+                </FrameLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="생년월일"
+                android:textSize="15dp"
+                android:fontFamily="@font/notosansregular"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#939393"
+                        android:hint="8자리 입력"
+                        android:textSize="13dp"
+                        android:backgroundTint="#ED6868"
+                        android:fontFamily="@font/notosansregular"/>
+                </FrameLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:text="성별"
+                android:textSize="15dp"
+                android:fontFamily="@font/notosansregular"/>
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|center"
-                    android:background="@drawable/circle_design2"
-                    android:fontFamily="@font/notosansbold"
-                    android:text="중복확인"
-                    android:textColor="#ED6868" />
-            </FrameLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="비밀번호"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="비밀번호"
+                    android:textColor="#000000"
                     android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
-            </FrameLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="비밀번호 확인"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
+                    android:fontFamily="@font/notosansregular"
+                    android:buttonTint="#ED6868"
+                    android:checked="true"
+                    android:text="여성"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="비밀번호 확인"
+                    android:textColor="#000000"
                     android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
-            </FrameLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="이름"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="실명을 입력하세요"
-                    android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
-            </FrameLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="생년월일"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="8자리 입력"
-                    android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
-            </FrameLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="성별"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <RadioButton
+                    android:layout_marginLeft="60dp"
+                    android:fontFamily="@font/notosansregular"
+                    android:buttonTint="#ED6868"
+                    android:text="남성"/>
+            </RadioGroup>
+            <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="13dp"
-                android:fontFamily="@font/notosansregular"
-                android:buttonTint="#ED6868"
-                android:checked="true"
-                android:text="여성"/>
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="13dp"
-                android:layout_marginLeft="60dp"
-                android:fontFamily="@font/notosansregular"
-                android:buttonTint="#ED6868"
-                android:text="남성"/>
-        </RadioGroup>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="회원가입"
-            android:fontFamily="@font/notosansbold"
-            android:textColor="#ffffff"
-            android:background="@drawable/round_circle3"/>
-    </LinearLayout>
+                android:orientation="horizontal">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="13dp"
+                    android:fontFamily="@font/notosansregular"
+                    android:buttonTint="#ED6868"
+                    android:checked="true"
+                    android:text="여성"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="13dp"
+                    android:layout_marginLeft="60dp"
+                    android:fontFamily="@font/notosansregular"
+                    android:buttonTint="#ED6868"
+                    android:text="남성"/>
+            </RadioGroup>
+        </LinearLayout>
+    </ScrollView>
+    <Button
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="회원가입"
+        android:fontFamily="@font/notosansbold"
+        android:textColor="#ffffff"
+        android:background="@drawable/round_circle3"/>
 </LinearLayout>
