--- a/app/src/main/res/layout/menu_recycle.xml
+++ b/app/src/main/res/layout/menu_recycle.xml
@@ -38,7 +38,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
