--- a/app/src/main/res/layout/map_activity_main.xml
+++ b/app/src/main/res/layout/map_activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="경기 성남시 수정구 복정로 20"
         tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
     <TextView
