--- a/app/src/main/res/layout/activity_rest_list_western_food.xml
+++ b/app/src/main/res/layout/activity_rest_list_western_food.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".restaurant.info.res_info_fragment3">
+    android:orientation="vertical"
+    tools:context=".restaurant.list.RestList_westernFood">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"/>
-
-</FrameLayout>
+        android:background="#FFFFFF" />
+</LinearLayout>
