--- a/app/src/main/res/layout/res_info_fragment1.xml
+++ b/app/src/main/res/layout/res_info_fragment1.xml
@@ -7,7 +7,7 @@
     tools:context=".restaurant.info.res_info_fragment1">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"/>
