--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -26,8 +26,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/button2"
@@ -40,145 +40,188 @@
                 android:textSize="24sp" />
 
 
-            <LinearLayout
+            <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@drawable/rice"
-                        android:rotationX="0"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        tools:ignore="SpeakableTextPresentCheck" />
-
-                    <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="35dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/notosansbold"
-                        android:text="한식"
-                        android:textColor="#000000"
-                        android:textSize="20sp" />
+                        android:layout_marginTop="20sp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/koreanFood_button"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginLeft="24dp"
+                                android:layout_marginTop="16dp"
+                                android:background="@drawable/rice"
+                                android:rotationX="0"
+                                android:textColor="#000000"
+                                android:textSize="20sp"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                            <TextView
+                                android:id="@+id/textView10"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="35dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/notosansbold"
+                                android:text="한식"
+                                android:textColor="#000000"
+                                android:textSize="20sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/chinaFood_button"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginLeft="24dp"
+                                android:layout_marginTop="16dp"
+                                android:background="@drawable/china_food"
+                                android:textColor="#000000"
+                                android:textSize="20sp"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                            <TextView
+                                android:id="@+id/textView11"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="35dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/notosansbold"
+                                android:text="중식"
+                                android:textColor="#000000"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/japanFood_button"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginLeft="24dp"
+                                android:layout_marginTop="16dp"
+                                android:background="@drawable/japan_food"
+                                android:textColor="#000000"
+                                android:textSize="20sp"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                            <TextView
+                                android:id="@+id/textView12"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="35dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/notosansbold"
+                                android:text="일식"
+                                android:textColor="#000000"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/westernFood_Button"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginLeft="24dp"
+                                android:layout_marginTop="16dp"
+                                android:background="@drawable/westernfood"
+                                android:textColor="#000000"
+                                android:textSize="20sp"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                            <TextView
+                                android:id="@+id/westernfood"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="35dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/notosansbold"
+                                android:text="양식"
+                                android:textColor="#000000"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/onemanFood_Button"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginLeft="24dp"
+                                android:layout_marginTop="16dp"
+                                android:background="@drawable/oneman_food"
+                                android:textColor="#000000"
+                                android:textSize="20sp"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                            <TextView
+                                android:id="@+id/textView13"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="35dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/notosansbold"
+                                android:text="혼밥"
+                                android:textColor="#000000"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/button4"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@drawable/china_food"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        tools:ignore="SpeakableTextPresentCheck" />
-
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="35dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/notosansbold"
-                        android:text="중식"
-                        android:textColor="#000000"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@drawable/japan_food"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        tools:ignore="SpeakableTextPresentCheck" />
-
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="35dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/notosansbold"
-                        android:text="일식"
-                        android:textColor="#000000"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/button6"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@drawable/oneman_food"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        tools:ignore="SpeakableTextPresentCheck" />
-
-                    <TextView
-                        android:id="@+id/textView13"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="35dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/notosansbold"
-                        android:text="혼밥"
-                        android:textColor="#000000"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
+            </HorizontalScrollView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center|top"
                 android:layout_marginTop="20dp"
                 android:background="#FFFFFF"></androidx.recyclerview.widget.RecyclerView>
+
+
         </LinearLayout>
     </ScrollView>
 
