--- a/app/src/main/res/layout/photo_recycle.xml
+++ b/app/src/main/res/layout/photo_recycle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.techtown.letseat.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<org.techtown.letseat.util.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,4 +19,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
-</org.techtown.letseat.SquareLayout>
+</org.techtown.letseat.util.SquareLayout>
