--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -8,17 +8,30 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/res_search_design"
-        android:ems="10"
-        android:fontFamily="@font/notosansbold"
-        android:inputType="textPersonName"
-        android:text="식당을 검색해주세요."
-        android:textAlignment="center" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/search_restaurant"
+            android:layout_width="wrap_content"
+            android:layout_height="62dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/res_search_design"
+            android:ems="10"
+            android:fontFamily="@font/notosansbold"
+            android:hint="검색어를 입력해주세요"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/search_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="검색" />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
