--- a/app/src/main/res/layout/order_review.xml
+++ b/app/src/main/res/layout/order_review.xml
@@ -77,13 +77,13 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageView"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/login_border1"
-            app:srcCompat="@android:drawable/ic_menu_gallery" />
+            app:srcCompat="@drawable/camera" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -92,7 +92,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/login_border1"
-            app:srcCompat="@android:drawable/ic_menu_gallery" />
+            app:srcCompat="@drawable/camera" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -101,7 +101,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/login_border1"
-            app:srcCompat="@android:drawable/ic_menu_gallery" />
+            app:srcCompat="@drawable/camera" />
 
     </LinearLayout>
 
