--- a/app/src/main/res/layout/order_review.xml
+++ b/app/src/main/res/layout/order_review.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ED6868"
     android:orientation="vertical"
-    tools:context=".ReviewActivity" >
+    tools:context=".Review.ReviewActivity" >
 
     <TextView
         android:id="@+id/textView7"
